@@ -1,6 +1,9 @@
 2008-11-28  Christopher Bratusek <nano-master@gmx.de>
 	* themes/Makefile.in: Fix installation of mxflat [Michal Jagermann]
 
+	* lisp/sawfish/wm/state/wm-spec.jl
+	* lisp/sawfish/wm/state/transient.jl: Suppert _NET_WM_USER_TIME [Helmut Eller]
+
 2008-11-20  Christopher Bratusek <nano-master@gmx.de>
 	* lisp/sawfish/wm/autoload.jl: load all keybindings
 
